# ripl3_json

./: .gitignore  .gitmodules  LICENSE  MANIFEST.in  README.md  descretelevel.py  pyproject.toml  requirements.txt  ripl3_descretelevel.py  ripl3_mass.py  setup.py  uninstall.txt
json/Ac/: 208Ac.json  211Ac.json  213Ac.json  221Ac.json  223Ac.json  227Ac.json  229Ac.json  231Ac.json  234Ac.json  235Ac.json
json/Ag/: 103Ag.json  104Ag.json  105Ag.json  106Ag.json  110Ag.json  112Ag.json  114Ag.json  115Ag.json  119Ag.json  121Ag.json  124Ag.json  125Ag.json  126Ag.json  130Ag.json  131Ag.json  133Ag.json  96Ag.json  99Ag.json
json/Al/: 30Al.json  33Al.json  35Al.json  36Al.json  39Al.json  40Al.json  41Al.json
json/Am/: 229Am.json  231Am.json  233Am.json  234Am.json  235Am.json  238Am.json  239Am.json  240Am.json  249Am.json
json/Ar/: 33Ar.json  34Ar.json  35Ar.json  36Ar.json  39Ar.json  41Ar.json  42Ar.json  43Ar.json  44Ar.json  45Ar.json  47Ar.json  48Ar.json  50Ar.json  52Ar.json  53Ar.json  54Ar.json
json/As/: 63As.json  69As.json  73As.json  74As.json  78As.json  80As.json  81As.json  82As.json  84As.json  88As.json  90As.json
json/At/: 204At.json  205At.json  208At.json  210At.json  211At.json  212At.json  213At.json  215At.json  221At.json  225At.json  228At.json
json/Au/: 169Au.json  176Au.json  178Au.json  179Au.json  180Au.json  181Au.json  182Au.json  183Au.json  188Au.json  189Au.json  190Au.json  194Au.json  198Au.json  202Au.json  203Au.json  205Au.json  209Au.json
json/B/: 12B.json  14B.json  20B.json  7B.json  8B.json
json/Ba/: 119Ba.json  121Ba.json  124Ba.json  129Ba.json  130Ba.json  133Ba.json  134Ba.json  135Ba.json  139Ba.json  140Ba.json  142Ba.json  147Ba.json  153Ba.json
json/Be/: 12Be.json  14Be.json  7Be.json
json/Bh/: 272Bh.json  277Bh.json
json/Bi/: 184Bi.json  187Bi.json  196Bi.json  197Bi.json  199Bi.json  200Bi.json  201Bi.json  203Bi.json  206Bi.json  207Bi.json  208Bi.json  209Bi.json  211Bi.json  212Bi.json  213Bi.json  221Bi.json
json/Bk/: 233Bk.json  245Bk.json  247Bk.json  248Bk.json  249Bk.json  250Bk.json
json/Br/: 65Br.json  66Br.json  71Br.json  72Br.json  73Br.json  74Br.json  75Br.json  76Br.json  77Br.json  80Br.json  83Br.json  89Br.json  90Br.json  96Br.json  98Br.json
json/C/: 12C.json  15C.json  16C.json  18C.json  21C.json  22C.json  8C.json
json/Ca/: 37Ca.json  38Ca.json  39Ca.json  41Ca.json  43Ca.json  46Ca.json  49Ca.json  50Ca.json  52Ca.json  60Ca.json
json/Cd/: 100Cd.json  102Cd.json  103Cd.json  105Cd.json  107Cd.json  109Cd.json  112Cd.json  114Cd.json  120Cd.json  122Cd.json  123Cd.json  124Cd.json  125Cd.json  130Cd.json  131Cd.json  132Cd.json  134Cd.json  135Cd.json
json/Ce/: 121Ce.json  122Ce.json  125Ce.json  135Ce.json  137Ce.json  138Ce.json  140Ce.json  141Ce.json  142Ce.json  143Ce.json  144Ce.json  145Ce.json  146Ce.json  153Ce.json  155Ce.json  159Ce.json
json/Cf/: 237Cf.json  244Cf.json  246Cf.json  250Cf.json  251Cf.json  254Cf.json
json/Cl/: 29Cl.json  30Cl.json  32Cl.json  33Cl.json  34Cl.json  36Cl.json  38Cl.json  39Cl.json  41Cl.json  44Cl.json  45Cl.json  46Cl.json  51Cl.json  52Cl.json
json/Cm/: 231Cm.json  236Cm.json  238Cm.json  240Cm.json  (+5 more)
source/: config.py  ripl3_descretelevel.py  ripl3_mass.py
(+4581 files in other folders)
