[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"


[project]
name = "ripl3_json"
authors = [
    {name = "Shin Okumura/IAEA-NDS", email = "s.okumura@iaea.org"},
]
version = "1.0.0b"
description = "RIPL3 JSON converter"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["RIPL3", "Nuclear Data"]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies"]



[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[project.urls]
Homepage = "https://github.com/shinokumura/ripl3_json"


[project.scripts]
convert = "ripl3_json.ripl3_discretelevel:main"
RIPL_Level = "ripl3_json.ripl3_dscretelevel:RIPL_Level"
mass_frdm = "ripl3_json.ripl3_mass:mass_frdm"
mass_hfb = "ripl3_json.ripl3_mass:mass_hfb"